--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -1,4 +1,4 @@
-.form-container {
+/* .form-container {
     display: flex;
     flex-direction: column;
     width: 300px;
@@ -33,4 +33,4 @@
 
 .form-container button[type="submit"]:hover {
     background-color: #3e8e41;
-}
+} */
